kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: borders-workflow-modeler
  labels:
    name: borders-workflow-modeler
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    targetPort: 443
  selector:
    name: borders-workflow-modeler
