kube/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permit-ingress
spec:
  podSelector:
    matchLabels:
      name: borders-workflow-modeler
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-external
    ports:
    - protocol: TCP
      port: 10080
    - protocol: TCP
      port: 10443
